Added some navigation buttons and fixes to French sections.

--- a/cvpWebApi/canada-vigilance-detail-fr.html
+++ b/cvpWebApi/canada-vigilance-detail-fr.html
@@ -9,7 +9,7 @@
     <title>Effets Indésirables de Canada Vigilance</title>
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <!-- Meta data -->
-    <meta name="dcterms.language" title="ISO639-2" content="eng" />
+    <meta name="dcterms.language" title="ISO639-2" content="fra" />
     <meta name="dcterms.title" content="Drug and health product inspections" />
     <meta name="description" content="Find the latest results from the Government's drug and health product inspections." />
     <meta name="dcterms.subject" title="scheme" content="" />
@@ -290,6 +290,15 @@ var autoCompletionOptions = { 'validLanguages' : 'fr', };
                                 </table>
                             </div>
                         </section>
+
+                        <div class="panel-footer text-center">
+                            <div class="form-group mrgn-bttm-0">
+                                <ul class="list-inline">
+                                    <li><a class="btn btn-default" href="canada-vigilance-result.html" role="button">Back to Search Results</a></li>
+                                    <li><a class="btn btn-default" href="canada-vigilance-fr.html" role="button">Nouvelle recherche</a></li>
+                                </ul>
+                            </div>
+                        </div>
 
                     </div>
                 </div>
