--- a/cvpWebApi/canada-vigilance-detail.html
+++ b/cvpWebApi/canada-vigilance-detail.html
@@ -291,6 +291,15 @@ var autoCompletionOptions = { 'validLanguages' : 'en', };
                                 </table>
                             </div>
                         </section>
+                        
+                        <div class="panel-footer text-center">
+                            <div class="form-group mrgn-bttm-0">
+                                <ul class="list-inline">
+                                    <li><a class="btn btn-default" href="canada-vigilance-result.html" role="button">Back to Search Results</a></li>    
+                                    <li><a class="btn btn-default" href="canada-vigilance.html" role="button">New Search</a></li>
+                                </ul>
+                            </div>
+                        </div>
 
                     </div>
                 </div>
