--- a/cvpWebApi/canada-vigilance-fr.html
+++ b/cvpWebApi/canada-vigilance-fr.html
@@ -9,7 +9,7 @@
     <title>Effets Indésirables de Canada Vigilance</title>
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <!-- Meta data -->
-    <meta name="dcterms.language" title="ISO639-2" content="eng" />
+    <meta name="dcterms.language" title="ISO639-2" content="fra" />
     <meta name="dcterms.title" content="Drug and health product inspections" />
     <meta name="description" content="Find the latest results from the Government's drug and health product inspections." />
     <meta name="dcterms.subject" title="scheme" content="" />
@@ -163,14 +163,6 @@ var autoCompletionOptions = { 'validLanguages' : 'fr', };
                                 </label>
                                 <input name="term" type="text" id="term" list="list-liste" placeholder="[Enter text here to search by Brand/Drug Name or Adverse Reaction Term]" class="full-width" required="required">
                                 <datalist id="list-liste" data-ajax-replace=".././list-liste-eng.txt" class="wb-data-ajax-replace-inited"> </datalist>
-                                <!--<label for="sourceOfReport" class="control-label">
-                                    <span class="field-name">Source of Report:</span>
-                                </label>
-                                <input name="sourceOfReport" type="text" id="sourceOfReport" list="list-liste" placeholder="[Should come from dropdown - Biomedical, Clinical Study etc.]" class="full-width" required="required">
-                                <label for="reportOutcome" class="control-label">
-                                    <span class="field-name">Report Outcome:</span>
-                                </label>
-                                <input name="reportOutcome" type="text" id="reportOutcome" list="list-liste" placeholder="[Should come from dropdown - Complete Recovery, Continued, Death etc.]" class="full-width" required="required">-->
                             </div>
 
                             <div class="form-group">
