--- a/cvpWebApi/canada-vigilance-result.html
+++ b/cvpWebApi/canada-vigilance-result.html
@@ -154,7 +154,8 @@ var autoCompletionOptions = { 'validLanguages' : 'en', };
             
             <section class="panel panel-default">
                 <header class="panel-heading">
-                    <h2 class="panel-title" id="title">Search Results (MedDRA Version: v.19.0)</h2>
+                    <h2 class="panel-title" id="title">Search Results (MedDRA Version: v.19.0)
+                    <a class="btn btn-default btn-xs mrgn-rght-md pull-right" href="canada-vigilance.html" role="button">New Search</a></h2>
                 </header>
 
                 <div class="panel-body">
@@ -171,14 +172,6 @@ var autoCompletionOptions = { 'validLanguages' : 'en', };
                      <table id="cvpTable" class="wb-tables table table-striped table-hover table-bordered">
                             <thead>
                                 <tr class="active">
-                                    <!--<th>Adverse Reaction Report Number</th>
-                                    <th>Medicinal ingredient</th>
-                                    <th>Manufacturer</th>
-                                    <th>Outcome</th>
-                                    <th>Decision date</th>
-                                    <th>Control number</th>
-                                    <th>Type of submission</th>-->
-
                                     <th>Adverse Reaction Report Number</th>
                                     <th>Market Authorization Holder AER Number</th>
                                     <th>Initial Received Date</th>
@@ -189,6 +182,12 @@ var autoCompletionOptions = { 'validLanguages' : 'en', };
                             </thead>
                             <tbody id="tbodyMain"></tbody>
                      </table>
+                    <div class="panel-footer text-center">
+                        <div class="form-group mrgn-bttm-0">
+                            <a class="btn btn-default" href="canada-vigilance.html" role="button">New Search</a>
+                        </div>
+                    </div>
+
 </div>
             </section>
             <div class="row pagedetails">
@@ -312,6 +311,7 @@ var autoCompletionOptions = { 'validLanguages' : 'en', };
     <script>
         var lang = "en";
         var pType = "cvp";
+        //var searchTerm = getURLParameter('term');
         $('#btnDownload').hide();
         $("a#langLink").attr('href', goDhprLangUrl(lang, pType));            
         
@@ -322,6 +322,7 @@ var autoCompletionOptions = { 'validLanguages' : 'en', };
                     //"success": function (data) {
                     //    alert('i got success');
                     //},
+                    //"bStateSave": "true",
                     "error": OnFail
                 },
                 "order": [[0, "desc"]],
