--- a/cvpWebApi/canada-vigilance-detail-fr.html
+++ b/cvpWebApi/canada-vigilance-detail-fr.html
@@ -294,7 +294,7 @@ var autoCompletionOptions = { 'validLanguages' : 'fr', };
                         <div class="panel-footer text-center">
                             <div class="form-group mrgn-bttm-0">
                                 <ul class="list-inline">
-                                    <li><a class="btn btn-default" href="canada-vigilance-result.html" role="button">Back to Search Results</a></li>
+                                    <!--<li><a class="btn btn-default" href="canada-vigilance-result.html" role="button">Back to Search Results</a></li>-->
                                     <li><a class="btn btn-default" href="canada-vigilance-fr.html" role="button">Nouvelle recherche</a></li>
                                 </ul>
                             </div>
