--- a/cvpWebApi/canada-vigilance-result.html
+++ b/cvpWebApi/canada-vigilance-result.html
@@ -194,7 +194,7 @@ var autoCompletionOptions = { 'validLanguages' : 'en', };
                 <div class="col-sm-5 col-xs-12 datemod">
                     <dl id="wb-dtmd">
                         <dt>Date modified:&#32;</dt>
-                        <dd><time property="dateModified">2016-09-23</time></dd>
+                        <dd><time property="dateModified">2016-10-04</time></dd>
                     </dl>
                 </div>
                 <div class="clear visible-xs"></div>
@@ -330,12 +330,12 @@ var autoCompletionOptions = { 'validLanguages' : 'en', };
                                 {
                                     "data": null,
                                     "render": function (data, type, full) {
-                                        return '<a href=canada-vigilance-detail.html?lang=en&linkID=' + data.ReportId + '>' + data.ReportNo + '</a>';
+                                        return '<a href=canada-vigilance-detail.html?lang=en&linkID=' + data.report_id + '>' + data.report_no + '</a>';
                                               }
                                 },
-                                { "data": "MahNo" },
+                                { "data": "mah_no" },
                                 {
-                                    "data": "DateReceived",
+                                    "data": "date_received",
                                     "render": function (data, type, full, meta) {
                                        return formatedDate(data);
                                     }
@@ -344,12 +344,12 @@ var autoCompletionOptions = { 'validLanguages' : 'en', };
 
                                     "data": null,
                                     "render": function (data, type, full) {
-                                        return data.AgeY + ' ' + data.AgeUnit;
+                                        return data.age_y + ' ' + data.age_unit;
                                     }
                                 },
-                                { "data": "GenderName" },
-                                { "data": "DrugName" },
-                                { "data": "PtName" }
+                                { "data": "gender_name" },
+                                { "data": "drug_name" },
+                                { "data": "pt_name" }
                 ]
             }
 
