--- a/cvpWebApi/canada-vigilance-result.html
+++ b/cvpWebApi/canada-vigilance-result.html
@@ -160,8 +160,58 @@ var autoCompletionOptions = { 'validLanguages' : 'en', };
                 </header>
 
                 <div class="panel-body">
+                    <div class="row">
+                        <div class="col-sm-4 alert alert-info">
+                            <label for="gender" class="col-sm-8 control-label">Gender</label>
+                            <select class="form-control" name="gender" id="gender">
+                                <option label=" "></option>
+                                <option value="2">Female</option>
+                                <option value="1">Male</option>
+                            </select>
+                        </div>
+                        <!--<div class="col-sm-4 alert alert-info">
+                            <label for="gender" class="col-sm-4 control-label">Gender</label>
+                            <select class="form-control" name="gender" id="gender">
+                                <option label=" "></option>
+                                <option value="AB">Alberta</option>
+                                <option value="BC">British Columbia</option>
+                                <option value="MB">Manitoba</option>
+                                <option value="NB">New Brunswick</option>
+                                <option value="NL">Newfoundland and Labrador</option>
+                                <option value="NT">Northwest Territories</option>
+                                <option value="NS">Nova Scotia</option>
+                                <option value="NU">Nunavut</option>
+                                <option value="ON">Ontario</option>
+                                <option value="PE">Prince Edward Island</option>
+                                <option value="QC">Quebec</option>
+                                <option value="SK">Saskatchewan</option>
+                                <option value="YT">Yukon</option>
+                            </select>
+                        </div>
+                        <div class="col-sm-4 alert alert-info">
+                            <label for="gender" class="col-sm-4 control-label">Gender</label>
+                            <select class="form-control" name="gender" id="gender">
+                                <option label=" "></option>
+                                <option value="AB">Alberta</option>
+                                <option value="BC">British Columbia</option>
+                                <option value="MB">Manitoba</option>
+                                <option value="NB">New Brunswick</option>
+                                <option value="NL">Newfoundland and Labrador</option>
+                                <option value="NT">Northwest Territories</option>
+                                <option value="NS">Nova Scotia</option>
+                                <option value="NU">Nunavut</option>
+                                <option value="ON">Ontario</option>
+                                <option value="PE">Prince Edward Island</option>
+                                <option value="QC">Quebec</option>
+                                <option value="SK">Saskatchewan</option>
+                                <option value="YT">Yukon</option>
+                            </select>
+                        </div>-->
+
+                    </div>     
+
                     <p id="subParam1">Matched list of the adverse reaction reports</p>
-                    <div class="pull-right" id="btnDownload">
+                    <!--<div class="pull-right" id="btnDownload">
                         <ul class="list-unstyled">
                             <li class="btn-group btn-group-xs">
                                 <input type="button" name="btnExcel" value="Download csv" id="btnExcel" class="btn btn-default btn-xs mrgn-rght-md" />
@@ -169,7 +219,7 @@ var autoCompletionOptions = { 'validLanguages' : 'en', };
                                 <input type="button" name="btnXml" value="Download xml" id="btnXml" class="btn btn-default btn-xs" />
                               </li>
                         </ul>
-                    </div>      
+                    </div>-->
                      <table id="cvpTable" class="wb-tables table table-striped table-hover table-bordered">
                             <thead>
                                 <tr class="active">
@@ -188,8 +238,7 @@ var autoCompletionOptions = { 'validLanguages' : 'en', };
                             <a class="btn btn-default" href="canada-vigilance.html" role="button">New Search</a>
                         </div>
                     </div>
-
-</div>
+                </div>
             </section>
             <div class="row pagedetails">
                 <div class="col-sm-5 col-xs-12 datemod">
@@ -315,7 +364,12 @@ var autoCompletionOptions = { 'validLanguages' : 'en', };
         var searchTerm = getParameterByName("term");
         $('#searchTerm').append("'" + searchTerm + "'");
         $('#btnDownload').hide();
-        $("a#langLink").attr('href', goDhprLangUrl(lang, pType));            
+        $("a#langLink").attr('href', goDhprLangUrl(lang, pType));
+
+        $('#gender').change(function () {
+            alert('i changed the gender dropdown box');
+            alert(window.location.href);
+        })
         
             window["wb-tables"] = {
                 "processing": true,
