--- a/cvpWebApi/canada-vigilance.html
+++ b/cvpWebApi/canada-vigilance.html
@@ -164,6 +164,7 @@ var autoCompletionOptions = { 'validLanguages' : 'en', };
                                             <input name="term" type="text" id="term" list="list-liste" placeholder="[Enter text here to search by Brand/Drug Name or Active Ingredient]" class="full-width" required="required">
                                             <input name="gender" type="hidden" id="gender"/>
                                             <input name="seriousReport" type="hidden" id="seriousReport"/>
+                                            <input name="ageRange" type="hidden" id="ageRange" />
                                             <datalist id="list-liste" data-ajax-replace=".././list-liste-eng.txt" class="wb-data-ajax-replace-inited"> </datalist>
                                         </div>
 
